--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://sweet-heart-7938.on.fleek.co",
+  "url": "https://twilight-lab-4313.on.fleek.co",
   "name": "Ton GiveAway DApp",
-  "iconUrl": "https://sweet-heart-7938.on.fleek.co/logo.svg"
+  "iconUrl": "https://twilight-lab-4313.on.fleek.co/logo.svg"
 }
